Refactored and Updated some code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(AirBusManagementSystem main.cpp
         classes/Parser.h
         classes/Utils.cpp
         classes/Utils.h
+        classes/Minheap.h
 )
 
 find_package(Doxygen)
